# datos-mexico-py

./: .gitignore  ASKS_JUNTA.md  BITACORA_DECISIONES.md  BRIEF_MOTOR_SECCION6.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  DATASETS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  data_error.md
.github/workflows/: docs-deploy.yml  openapi-drift-cron.yml  openapi-drift.yml  publish.yml  tests.yml
analisis/matrices/: README_matrices.md  README_matrices_anuales.md  asignacion_perfiles.py  auditoria_anclaje.csv  auditoria_anclaje.py  carga_matrices.py  cierre_anclaje.py  comparacion_paso4.py  corrida_final_paper.py  descarga_enoe.py  diagnostico_nan.csv  diagnostico_nan.py  estimador_matrices.py  estimador_matrices_anuales.py  inspeccion_panel.py  marginal_escolaridad_2024T3.csv  matrices_anuales_2015_2024.csv  matrices_transicion_2024T3_2024T4.csv  recalculo_masa_cero.py  reproducibilidad.ipynb  revalidacion_brecha1.csv  revalidacion_brecha1.py  sensibilidad_kappa.csv  sensibilidad_kappa_anuales.csv
analisis/matrices/resultados_finales/: checks_consistencia.csv  cobertura.csv  decada_retiro.csv  densidad_definiciones.csv  metadata_corrida.csv  perfil_sexo_escolaridad.csv  tabla_maestra_masa_cero.csv  tr_histograma.csv  tr_percentiles.csv
audits/2026-05/: peer-review-fase-2.md
docs/: citation.md  contributing.md  faq.md  index.md  quickstart.md  sources.md
docs/conceptos/: cache-retries.md  caveats-editoriales.md  decimal.md  identidad-contable.md
docs/reference/: cdmx.md  client.md  comparativo.md  consar.md  demo.md  enigh.md  enoe.md  exceptions.md  export.md  models.md  nombramientos.md  personas.md
docs/tutoriales/: cdmx.md  comparativo.md  consar.md  enigh.md  enoe.md
examples/: 01_quickstart.ipynb  02_cdmx_servidores_publicos.ipynb  03_sar_composicion.ipynb  04_enigh_hogares_desigualdad.ipynb  05_paper_amafore_workflow.ipynb  06_enoe_mercado_laboral.ipynb
motor/: README.md  __init__.py  config.yaml  datos.py  figuras.py  motor.py  reglas_sar.py  run_skeleton.py  validacion.py
motor/data/: README.md  build_rendimientos_brutos.py  cnsf_emssa09_mortalidad.csv  conapo_proyecciones_nacional_2025_2070.csv  consar_rendimiento_bruto_anual.csv  imss_sbc_promedio.csv  inpc_mensual.csv
openapi/: README.md  openapi.snapshot.json  update_snapshot.py
scripts/: regen_docs_figures.py  sync_requirements.sh
src/datos_mexico/: __init__.py  _cache.py  _constants.py  _helpers.py  _http.py  _namespace.py  _version.py  client.py  exceptions.py
src/datos_mexico/endpoints/: __init__.py  cdmx.py  comparativo.py  consar.py  demo.py  enigh.py  enoe.py  export.py  nombramientos.py  personas.py
src/datos_mexico/models/: __init__.py  base.py  cdmx.py  comparativo.py  consar.py  demo.py  enigh.py  enoe.py  export.py  nombramientos.py  personas.py
tests/: conftest.py  test_cache.py  test_cdmx.py  test_client.py  test_comparativo.py  test_consar.py  test_demo.py  test_enigh.py  test_enoe.py  test_exceptions.py  test_export.py  test_helpers.py  test_http.py  test_namespace.py  test_nombramientos.py  test_personas.py  test_readme_examples.py  test_version.py
tests/fixtures/: cdmx_brecha_edad.json  cdmx_catalogo.json  cdmx_dashboard_stats.json  cdmx_puestos_ranking.json  cdmx_sector_stats.json  cdmx_sectores.json  cdmx_sectores_compare.json  cdmx_sectores_ranking.json  cdmx_servidor_detail.json  cdmx_servidores_lista.json  cdmx_servidores_stats.json  comparativo_actividad_cdmx_vs_nacional.json  comparativo_aportes_vs_jubilaciones.json  comparativo_bancarizacion.json  comparativo_decil_servidores_cdmx.json  comparativo_gastos_cdmx_vs_nacional.json  comparativo_ingreso_cdmx_vs_nacional.json  comparativo_top_vs_bottom.json  consar_activo_neto_agregado.json  consar_activo_neto_serie.json  consar_activo_neto_snapshot.json  consar_afores.json  consar_comisiones_serie.json  consar_comisiones_snapshot.json  consar_cuentas_serie.json  consar_cuentas_sistema.json  consar_cuentas_snapshot.json  consar_flujos_serie.json  consar_flujos_snapshot.json  consar_medidas_serie.json  consar_medidas_snapshot.json  consar_metricas_cuenta.json  consar_metricas_sensibilidad.json  consar_pea_cotizantes.json  consar_precios_comparativo.json  consar_precios_serie.json  consar_precios_snapshot.json  consar_recursos_composicion.json  consar_recursos_imss_vs_issste.json  consar_recursos_por_afore.json  (+45 more)
tests/integration/: __init__.py  conftest.py  test_cache_behavior.py  test_client_lifecycle.py  test_cross_namespace.py  test_data_integrity.py  test_error_propagation.py  test_real_workflows.py
tests/motor/: conftest.py  test_motor.py
