[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datos-mexico"
dynamic = ["version"]
description = "Cliente Python oficial para la API del Observatorio Datos México"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "David Fernando Ávila Díaz", email = "df.avila.diaz@gmail.com" }
]
maintainers = [
  { name = "Equipo de Datos México", email = "pypi@datosmexico.org" }
]
keywords = [
  "mexico",
  "datos-abiertos",
  "open-data",
  "consar",
  "sar",
  "afore",
  "enigh",
  "inegi",
  "cdmx",
  "transparencia",
  "api-client",
  "pensiones",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.0",
  "respx>=0.21.0",
]
examples = [
  "jupyter>=1.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://datosmexico.org"
Documentation = "https://github.com/datos-mexico/datos-mexico-py#readme"
Repository = "https://github.com/datos-mexico/datos-mexico-py"
Issues = "https://github.com/datos-mexico/datos-mexico-py/issues"
Changelog = "https://github.com/datos-mexico/datos-mexico-py/releases"

[tool.hatch.version]
path = "src/datos_mexico/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/datos_mexico"]
include = ["src/datos_mexico/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
  "src/datos_mexico",
  "README.md",
  "LICENSE",
  "CITATION.cff",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
markers = [
  "integration: integration tests against the live API; gated by DATOS_MEXICO_INTEGRATION_TESTS=1",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
